<!--
Bowling Tracker Android app
Copyright the Bowling Tracker Contributors.

This program is free software: you can redistribute it and/or modify it under
the terms of the GNU General Public License as published by the Free Software
Foundation, either version 3 of the License, or (at your option) any later
version.

This program is distributed in the hope that it will be useful, but WITHOUT ANY
WARRANTY; without even the implied warranty of  MERCHANTABILITY or FITNESS FOR
A PARTICULAR PURPOSE. See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with
this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Bowling Tracker</string>
    <string name="fragment_games_final_average">final average:</string>
    <string name="fragment_games_series_total">Series total</string>
    <string name="fragment_series_stats_not_applicable">N/A</string>
    <string name="fragment_series_stats_highest_average">Highest Average</string>
    <string name="fragment_series_stats_highest_game">Highest Game</string>
    <string name="fragment_series_stats_highest_series">Highest Series</string>
    <string name="fragment_series_stats_lowest_game">Lowest Game</string>
    <string name="fragment_series_stats_lowest_series">Lowest Series</string>
    <string name="fragment_series_stats_highest_average_inc">Highest Increase in Average</string>
    <string name="fragment_series_stats_highest_average_dec">Highest Drop in Average</string>
    <string name="fragment_series_main_tab_series_list">Series List</string>
    <string name="fragment_series_main_tab_stats">Stats</string>
    <string name="fragment_series_main_tab_chart">Chart</string>
    <string name="dialog_league_error_no_league_name">A league name is required</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_league_default_team_number">0</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_edit">Edit</string>
    <string name="list_adapter_league_average">Average</string>
    <string name="list_adapter_series_series">Series</string>
    <string name="list_adapter_series_scratch_total">Scratch Total</string>
    <string name="dialog_add_league_add_new">Add New League</string>
    <string name="dialog_add_league_name">League Name:</string>
    <string name="dialog_add_league_player_name">Player Name:</string>
    <string name="dialog_add_league_team_number">Team Number:</string>
    <string name="dialog_add_league_team_name">Team Name:</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add_series_new_series">Add New Series</string>
    <string name="dialog_add_series_date">Date:</string>
    <string name="dialog_add_series_hdcp_per_game">HDCP per game</string>
    <string name="list_adapter_games_game_label">Game:</string>
</resources>