<?xml version="1.0" encoding="utf-8"?>
<!--
Bowling Tracker Android app
Copyright the Bowling Tracker Contributors.

This program is free software: you can redistribute it and/or modify it under
the terms of the GNU General Public License as published by the Free Software
Foundation, either version 3 of the License, or (at your option) any later
version.

This program is distributed in the hope that it will be useful, but WITHOUT ANY
WARRANTY; without even the implied warranty of  MERCHANTABILITY or FITNESS FOR
A PARTICULAR PURPOSE. See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with
this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/series_stats_highest_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_series_stats_highest_average"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/series_stats_highest_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_series_stats_highest_game"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/series_stats_highest_series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_series_stats_highest_series"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/series_stats_lowest_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_series_stats_lowest_game"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/series_stats_lowest_series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_series_stats_lowest_series"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/series_stats_highest_average_inc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_series_stats_highest_average_inc"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/series_stats_highest_average_drop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_series_stats_highest_average_dec"
        android:textSize="18sp" />

</LinearLayout>