<?xml version="1.0" encoding="utf-8"?>
<!--
Bowling Tracker Android app
Copyright the Bowling Tracker Contributors.

This program is free software: you can redistribute it and/or modify it under
the terms of the GNU General Public License as published by the Free Software
Foundation, either version 3 of the License, or (at your option) any later
version.

This program is distributed in the hope that it will be useful, but WITHOUT ANY
WARRANTY; without even the implied warranty of  MERCHANTABILITY or FITNESS FOR
A PARTICULAR PURPOSE. See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with
this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="#4000FF"
            android:text="@string/dialog_add_league_add_new"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_add_league_name"/>
            <EditText
                android:id="@+id/add_league_dialog_edittext_league_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="100sp"/>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_add_league_player_name"/>
            <EditText
                android:id="@+id/add_league_dialog_edittext_player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_add_league_team_number"/>
            <EditText
                android:id="@+id/add_league_dialog_edittext_team_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_add_league_team_name"/>
            <EditText
                android:id="@+id/add_league_dialog_edittext_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="1"
            android:columnCount="2">
            <Button
                android:id="@+id/add_league_dialog_button_ok"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/dialog_ok"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"/>
            <Button
                android:id="@+id/add_league_dialog_button_cancel"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/dialog_cancel"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"/>
        </GridLayout>
    </LinearLayout>
</LinearLayout>